--- a/cv.css
+++ b/cv.css
@@ -3,3 +3,14 @@
     width: 60%;
     height: 2px;
 }
+
+.title2CV{
+    color:blue;
+    font-family: Arial, Helvetica, sans-serif; 
+    font-weight: bold;
+    
+}
+
+.li{
+    list-style: none;
+}
